--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nuestros momentos</title>
+  <title>Recuerdos Románticos</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -55,17 +55,21 @@
     .delete-button:hover {
       background-color: #a0002c;
     }
+    .preview-container {
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
-  <h1>✈️ Nuestros viajes ✈️</h1>
+  <h1>❤️ Nuestros Momentos Románticos ❤️</h1>
 
   <div class="form-container">
     <h2>Agregar nuevo recuerdo</h2>
     <input type="text" id="title" placeholder="Título del recuerdo" />
-    <input type="text" id="imageUrl" placeholder="URL de imagen (opcional)" />
-    <input type="text" id="videoUrl" placeholder="URL de video (opcional)" />
+    <input type="file" id="imageFile" accept="image/*" onchange="previewMedia()" />
+    <input type="file" id="videoFile" accept="video/*" onchange="previewMedia()" />
     <textarea id="description" placeholder="Descripción o anécdota"></textarea>
+    <div class="preview-container" id="mediaPreview"></div>
     <button onclick="addPost()">Guardar Recuerdo</button>
   </div>
 
@@ -96,8 +100,8 @@
         postContainer.className = 'post';
         postContainer.innerHTML = `
           <h3>${post.title}</h3>
-          ${post.imageUrl ? `<img src="${post.imageUrl}" alt="Imagen del recuerdo" />` : ''}
-          ${post.videoUrl ? `<video controls src="${post.videoUrl}"></video>` : ''}
+          ${post.imageData ? `<img src="${post.imageData}" alt="Imagen del recuerdo" />` : ''}
+          ${post.videoData ? `<video controls src="${post.videoData}"></video>` : ''}
           <p>${post.description}</p>
           <button class="delete-button" onclick="deletePost(${index})">Borrar Recuerdo</button>
         `;
@@ -107,25 +111,68 @@
 
     function addPost() {
       const title = document.getElementById('title').value;
-      const imageUrl = document.getElementById('imageUrl').value;
-      const videoUrl = document.getElementById('videoUrl').value;
+      const imageFile = document.getElementById('imageFile').files[0];
+      const videoFile = document.getElementById('videoFile').files[0];
       const description = document.getElementById('description').value;
 
-      if (!title || (!imageUrl && !videoUrl && !description)) return;
+      if (!title && !description && !imageFile && !videoFile) return;
 
-      const newPost = { title, imageUrl, videoUrl, description };
-      const posts = getSavedPosts();
-      posts.unshift(newPost);
-      savePosts(posts);
-      renderPosts(posts);
+      const readerPromises = [];
+      if (imageFile) {
+        readerPromises.push(readFileAsDataURL(imageFile));
+      } else {
+        readerPromises.push(Promise.resolve(null));
+      }
+      if (videoFile) {
+        readerPromises.push(readFileAsDataURL(videoFile));
+      } else {
+        readerPromises.push(Promise.resolve(null));
+      }
 
-      document.getElementById('title').value = '';
-      document.getElementById('imageUrl').value = '';
-      document.getElementById('videoUrl').value = '';
-      document.getElementById('description').value = '';
+      Promise.all(readerPromises).then(([imageData, videoData]) => {
+        const newPost = { title, imageData, videoData, description };
+        const posts = getSavedPosts();
+        posts.unshift(newPost);
+        savePosts(posts);
+        renderPosts(posts);
+
+        document.getElementById('title').value = '';
+        document.getElementById('imageFile').value = '';
+        document.getElementById('videoFile').value = '';
+        document.getElementById('description').value = '';
+        document.getElementById('mediaPreview').innerHTML = '';
+      });
     }
 
-    // Inicializar
+    function readFileAsDataURL(file) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = reject;
+        reader.readAsDataURL(file);
+      });
+    }
+
+    function previewMedia() {
+      const imageFile = document.getElementById('imageFile').files[0];
+      const videoFile = document.getElementById('videoFile').files[0];
+      const previewContainer = document.getElementById('mediaPreview');
+      previewContainer.innerHTML = '';
+
+      if (imageFile) {
+        const img = document.createElement('img');
+        img.src = URL.createObjectURL(imageFile);
+        previewContainer.appendChild(img);
+      }
+
+      if (videoFile) {
+        const video = document.createElement('video');
+        video.src = URL.createObjectURL(videoFile);
+        video.controls = true;
+        previewContainer.appendChild(video);
+      }
+    }
+
     document.addEventListener('DOMContentLoaded', () => {
       const posts = getSavedPosts();
       renderPosts(posts);
