--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Recuerdos Románticos</title>
+  <title>Recuerdos</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -61,7 +61,7 @@
   </style>
 </head>
 <body>
-  <h1>❤️ Nuestros Momentos Románticos ❤️</h1>
+  <h1>✈️ Nuestros viajes ✈️</h1>
 
   <div class="form-container">
     <h2>Agregar nuevo recuerdo</h2>
